# i3status

./: .gitignore  Makefile  Pipfile  i3status.py  pyproject.toml
