[tool]
[tool.dephell]
[tool.dephell.main]
from = "Pipfile"
to = {format = "poetry", path = "pyproject.toml"}

[tool.poetry]
name = "root"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
nvidia-ml-py = "<100"
bitmath = "^1.3.3"

[tool.poetry.dev-dependencies]
autopep8 = "*"
ipython = "*"
pycodestyle = {git = "https://github.com/PyCQA/pycodestyle.git"}
